--- a/05-nginx-with-node/node-server.conf
+++ b/05-nginx-with-node/node-server.conf
@@ -9,14 +9,14 @@ server{
   gzip_comp_level 4; # 数字越大，压缩比越高，压缩时间越长
   gzip_types text/plain application/javascript application/x-javascript text/css application/xml text/javascript image/jpeg image/jpg image/gif image/png;  # 需要开启压缩的文件类型
 
-  # 通配规则，转发给node进程处理
+  # 动态资源，转发给node进程处理
   location / { 
     proxy_pass http://127.0.0.1:3100/;
     proxy_set_header Host $host;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
   }
 
-  # 目录访问限制为static目录文件夹，为公开资源
+  # 静态资源分离，目录访问限制为static目录文件夹，为公开资源
   location ~* \.(css|gif|jpe?g|png|eot|svg|ttf|woff|js)$ {
     root /home/www/JBJ/static; # 静态资源目录
     access_log  off; # 关闭日志
