--- a/05-nginx-with-node/node-server.conf
+++ b/05-nginx-with-node/node-server.conf
@@ -17,7 +17,7 @@ server{
   }
 
   # 静态资源分离，目录访问限制为static目录文件夹，为公开资源
-  location ~* \.(css|gif|jpe?g|png|eot|svg|ttf|woff|js)$ {
+  location ~* \.(css|gif|jpe?g|png|eot|svg|ttf|woff|js|txt)$ {
     root /home/www/JBJ/static; # 静态资源目录
     access_log  off; # 关闭日志
     expires     7d;  # 缓存过期时间
