更新文档地址配置

--- a/05-nginx-with-node/node-server.conf
+++ b/05-nginx-with-node/node-server.conf
@@ -22,4 +22,9 @@ server{
     access_log  off; # 关闭日志
     expires     7d;  # 缓存过期时间
   }
+  
+  # 文档地址配置
+  location ~* /doc/? {                                                                          
+    root /home/www/pbkj-dwj/; # 静态资源目录
+  }
 }
