--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
     "memcached": "^2.1.0",
     "moment": "^2.10.3",
     "moment-timezone": "^0.4.0"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.0",
+    "gulp-load-plugins": "^1.0.0-rc.1"
   }
 }
