--- a/05-nginx-with-node/node-server.conf
+++ b/05-nginx-with-node/node-server.conf
@@ -1,6 +1,6 @@
 server{
   listen 80; # 需要监听的端口
-  listen [::]:80;  
+  listen [::]:80;  # ipv6中‘::’代表localhost，IPv6 addresses (0.7.36) are specified in square brackets
   server_name hwkj-jbj.plusman.cn; # 域名绑定
   root /home/www/JBJ;   # 资源目录，http://hwkj-jbj.plusman.cn/ 访问到的文件目录
 
