--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/plusmancn/node-test#readme",
   "dependencies": {
+    "async": "^1.4.2",
     "memcached": "^2.1.0",
     "moment": "^2.10.3",
     "moment-timezone": "^0.4.0"
