--- a/33-node-event-loop/package.json
+++ b/33-node-event-loop/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "benchmark": "^1.0.0",
+    "heapdump": "^0.3.7",
     "microtime": "^2.0.0"
   }
 }
