--- a/37-redis/default.conf
+++ b/37-redis/default.conf
@@ -210,6 +210,7 @@ dir ./
 # refuse the slave request.
 #
 # masterauth <master-password>
+requirepass "SoucheRedis#$%"
 
 # When a slave loses its connection with the master, or when the replication
 # is still in progress, the slave can act in two different ways:
