--- a/37-redis/redis1.conf
+++ b/37-redis/redis1.conf
@@ -40,3 +40,13 @@ src/redis-server conf/redis.conf
 0， 表示内核将检查是否有足够的可用内存供应用进程使用；如果有足够的可用内存，内存申请允许；否则，内存申请失败，并把错误返回给应用进程。
 1， 表示内核允许分配所有的物理内存，而不管当前的内存状态如何。
 2， 表示内核允许分配超过所有物理内存和交换空间总和的内存
+
+# THP
+http://www.tuicool.com/articles/Qj267j
+
+# redis客户端
+http://redis.js.org/
+https://www.npmjs.com/package/redis
+
+# CLI交互界面执行
+AUTH 'SoucheRedis#$%'
